--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "author": "Gopal Gavas",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "winston": "^3.14.2"
   },
   "devDependencies": {
