--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "nodejs",
     "express",
     "mongodb",
-    "restaurant"
+    "ecommerce",
+    "products"
   ],
   "author": "Gopal Gavas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "validator": "^13.12.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
