--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "slugify": "^1.6.6",
     "validator": "^13.12.0",
     "winston": "^3.14.2"
